--- a/full_data_analysis.ipynb
+++ b/full_data_analysis.ipynb
@@ -60,319 +60,7 @@
     "            'SIFTcat':np.object}\n",
     "    cadd_anno = pd.read_csv(file_path,sep='\\t',dtype=dtype)\n",
     "    print('Cadd annotation loaded.')\n",
-    "    return cadd_anno"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cadd annotation loaded.\n"
-     ]
-    }
-   ],
-   "source": [
-    "file_path = os.path.join('data','all_variants','cadd_with_info_no_nan_all_imputed.tsv')\n",
-    "all_variants = load_cadd_annotation(file_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Ref</th>\n",
-       "      <th>Anc</th>\n",
-       "      <th>Alt</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Length</th>\n",
-       "      <th>isTv</th>\n",
-       "      <th>Consequence</th>\n",
-       "      <th>GC</th>\n",
-       "      <th>CpG</th>\n",
-       "      <th>priPhCons</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PolyPhenCat</th>\n",
-       "      <th>PolyPhenVal</th>\n",
-       "      <th>SIFTcat</th>\n",
-       "      <th>SIFTval</th>\n",
-       "      <th>RawScore</th>\n",
-       "      <th>PHRED</th>\n",
-       "      <th>chr_pos</th>\n",
-       "      <th>INFO</th>\n",
-       "      <th>key</th>\n",
-       "      <th>POS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>A</td>\n",
-       "      <td>G</td>\n",
-       "      <td>SNV</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NON_SYNONYMOUS</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>0.022</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>deleterious</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.106787</td>\n",
-       "      <td>11.25</td>\n",
-       "      <td>1_1167659</td>\n",
-       "      <td>PATHOGENIC</td>\n",
-       "      <td>B3GALT6</td>\n",
-       "      <td>1167659</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>C</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "      <td>SNV</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NON_SYNONYMOUS</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.36</td>\n",
-       "      <td>0.007</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>deleterious</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>4.482313</td>\n",
-       "      <td>24.20</td>\n",
-       "      <td>1_1167674</td>\n",
-       "      <td>PATHOGENIC</td>\n",
-       "      <td>B3GALT6</td>\n",
-       "      <td>1167674</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>TGGC</td>\n",
-       "      <td>TGGC</td>\n",
-       "      <td>T</td>\n",
-       "      <td>DEL</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>INFRAME</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.38</td>\n",
-       "      <td>0.065</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.924056</td>\n",
-       "      <td>15.74</td>\n",
-       "      <td>1_1167680</td>\n",
-       "      <td>POPULATION</td>\n",
-       "      <td>B3GALT6</td>\n",
-       "      <td>1167680</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>TGGC</td>\n",
-       "      <td>TGGC</td>\n",
-       "      <td>T</td>\n",
-       "      <td>DEL</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>UPSTREAM</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.38</td>\n",
-       "      <td>0.065</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.924056</td>\n",
-       "      <td>15.74</td>\n",
-       "      <td>1_1167680</td>\n",
-       "      <td>POPULATION</td>\n",
-       "      <td>SDF4</td>\n",
-       "      <td>1167680</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>TGGC</td>\n",
-       "      <td>TGGC</td>\n",
-       "      <td>T</td>\n",
-       "      <td>DEL</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>REGULATORY</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.38</td>\n",
-       "      <td>0.065</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.924056</td>\n",
-       "      <td>15.74</td>\n",
-       "      <td>1_1167680</td>\n",
-       "      <td>POPULATION</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1167680</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 96 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Ref   Anc Alt Type  Length   isTv     Consequence    GC   CpG  priPhCons  \\\n",
-       "0     A     A   G  SNV       0  False  NON_SYNONYMOUS  0.85  0.40      0.022   \n",
-       "1     C     C   T  SNV       0  False  NON_SYNONYMOUS  0.83  0.36      0.007   \n",
-       "2  TGGC  TGGC   T  DEL       3    NaN         INFRAME  0.83  0.38      0.065   \n",
-       "3  TGGC  TGGC   T  DEL       3    NaN        UPSTREAM  0.83  0.38      0.065   \n",
-       "4  TGGC  TGGC   T  DEL       3    NaN      REGULATORY  0.83  0.38      0.065   \n",
-       "\n",
-       "    ...     PolyPhenCat  PolyPhenVal      SIFTcat  SIFTval  RawScore  PHRED  \\\n",
-       "0   ...             NaN          0.0  deleterious     0.00  1.106787  11.25   \n",
-       "1   ...             NaN          0.0  deleterious     0.03  4.482313  24.20   \n",
-       "2   ...             NaN          0.0          NaN     0.00  1.924056  15.74   \n",
-       "3   ...             NaN          0.0          NaN     0.00  1.924056  15.74   \n",
-       "4   ...             NaN          0.0          NaN     0.00  1.924056  15.74   \n",
-       "\n",
-       "     chr_pos        INFO      key      POS  \n",
-       "0  1_1167659  PATHOGENIC  B3GALT6  1167659  \n",
-       "1  1_1167674  PATHOGENIC  B3GALT6  1167674  \n",
-       "2  1_1167680  POPULATION  B3GALT6  1167680  \n",
-       "3  1_1167680  POPULATION     SDF4  1167680  \n",
-       "4  1_1167680  POPULATION      NaN  1167680  \n",
-       "\n",
-       "[5 rows x 96 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_variants.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_variants['INFO'] = all_variants['INFO'].astype('category')\n",
-    "all_variants['INFO'] = all_variants['INFO'].cat.codes\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in all_variants.select_dtypes(exclude=[np.object]).columns:\n",
-    "    null = all_variants[col].isnull().values.sum()\n",
-    "    if null>0:\n",
-    "        all_variants = all_variants.drop([col],axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# one-hot-encoding for categorical data\n",
-    "# le = preprocessing.LabelEncoder()\n",
-    "# categorical_features = [fea for fea in all_variants.select_dtypes(\n",
-    "#     include=[np.object]).columns if fea not in ['Anc','INFO','chr_pos']]\n",
-    "dummy_all_var=all_variants.drop(['Anc','INFO','chr_pos'],axis=1)\n",
-    "dummy_all_var = pd.get_dummies(dummy_all_var,sparse=True)\n",
-    "\n",
-    "# for feature in categorical_features:\n",
-    "# #     if len(copy_all_var[feature].unique()) >100:\n",
-    "# #         print(feature,len(copy_all_var[feature].unique()))\n",
-    "#     try:\n",
-    "#         copy_all_var[feature] = le.fit_transform(copy_all_var[feature])\n",
-    "#     except:\n",
-    "#         copy_all_var[feature] = copy_all_var[feature].fillna('0')\n",
-    "#         copy_all_var[feature] = le.fit_transform(copy_all_var[feature])\n",
-    "    \n",
-    "# # scaling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dummy_all_var['INFO'] = all_variants['INFO']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in all_variants.select_dtypes(exclude=[np.object]).columns:\n",
-    "    null = all_variants[col].isnull().values.sum()\n",
-    "    if null>0:\n",
-    "        print(null,col)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "    return cadd_anno\n",
     "def read_data_set(data_table,test_size=0.25,BENCHMARK=False):\n",
     "    '''\n",
     "    convert a pandas dataframe data table into Datasets(dataset,dataset)\n",
@@ -461,24 +149,63 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset loaded. (262877, 17122)\n"
+      "Cadd annotation loaded.\n",
+      "Drop features that I do not know how to impute.\n",
+      "42 priPhCons\n",
+      "11208 bStatistic\n",
+      "70 mutIndex\n",
+      "320266 mirSVR-Score\n",
+      "320266 mirSVR-E\n",
+      "320266 mirSVR-Aln\n",
+      "350487 targetScan\n",
+      "11390 fitCons\n",
+      "758 EncH3K27Ac\n",
+      "1013 EncH3K4Me1\n",
+      "585 EncH3K4Me3\n",
+      "2830 EncNucleo\n",
+      "349579 motifECount\n",
+      "349579 motifEScoreChng\n",
+      "68483 cDNApos\n",
+      "68483 relcDNApos\n",
+      "72796 CDSpos\n",
+      "72796 relCDSpos\n",
+      "72796 protPos\n",
+      "72796 relProtPos\n",
+      "259931 Dst2Splice\n",
+      "162523 Grantham\n",
+      "Make dummy variables. Now the data has shape: (350503, 17122)\n",
+      "Added the INFO column.\n"
      ]
     }
    ],
    "source": [
     "if __name__=='__main__':\n",
+    "    \n",
+    "    file_path = os.path.join('data','all_variants','cadd_with_info_no_nan_all_imputed.tsv')\n",
+    "    all_variants = load_cadd_annotation(file_path)\n",
+    "\n",
+    "    all_variants['INFO'] = all_variants['INFO'].astype('category')\n",
+    "    all_variants['INFO'] = all_variants['INFO'].cat.codes\n",
+    "\n",
+    "    print('Drop features that I do not know how to impute.')\n",
+    "    for col in all_variants.select_dtypes(exclude=[np.object]).columns:\n",
+    "        null = all_variants[col].isnull().values.sum()\n",
+    "        if null>0:\n",
+    "            all_variants = all_variants.drop([col],axis=1)\n",
+    "            print(null, col)\n",
+    "        \n",
+    "    dummy_all_var=all_variants.drop(['Anc','INFO','chr_pos'],axis=1)\n",
+    "    dummy_all_var = pd.get_dummies(dummy_all_var,sparse=True)\n",
+    "    print('Make dummy variables. Now the data has shape:',dummy_all_var.shape)\n",
+    "\n",
+    "    dummy_all_var['INFO'] = all_variants['INFO']\n",
+    "    print('Added the INFO column.')\n",
+    "\n",
     "\n",
     "    # read data\n",
     "#     processed_all = pd.read_csv('data/myh7/myh7_myo5b.csv',sep='\\t')\n",
@@ -548,42 +275,17 @@
     "#                                      pipeline_sgd,\n",
     "#                                      full_data)#,\n",
     "#                                      #filename)\n",
-    "#     inference(classifier_sgd,full_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start training...\n"
-     ]
-    }
-   ],
-   "source": [
+    "#     inference(classifier_sgd,full_data)\n",
     "    # ==========================================================\n",
     "    # Linear model + SGDregressor\n",
     "    # Parameters\n",
-    "    n_components = np.arange(10,50,10)\n",
-    "    loss = ['squared_loss', 'huber',\n",
-    "            'epsilon_insensitive', \n",
-    "            'squared_epsilon_insensitive']\n",
-    "    penalty = ['l1','l2','elasticnet']\n",
-    "    l1_ratio = [0.15,0.2,0.5,0.8]\n",
-    "    learning_rate = ['constant','optimal','invscaling']\n",
+    "#     n_components = np.arange(10,50,10)\n",
+    "    loss = ['squared_loss']#, 'huber',\n",
+    "#             'epsilon_insensitive', \n",
+    "#             'squared_epsilon_insensitive']\n",
+    "    penalty = ['elasticnet']\n",
+    "    l1_ratio = [0.15]#,0.2,0.5,0.8]\n",
+    "    learning_rate = ['constant']#,'optimal','invscaling']\n",
     "    param_grid_sgd = [{#'pca__n_components':n_components,\n",
     "                   'sgd__penalty':penalty,\n",
     "                   'sgd__loss':loss,\n",
@@ -592,7 +294,7 @@
     "                   'sgd__tol':[1e-6],\n",
     "                   'sgd__warm_start':[True],\n",
     "                   'sgd__max_iter':[10000],\n",
-    "                   'sgd__eta0':[0.1,0.01,0.5],\n",
+    "                   'sgd__eta0':[0.1],#0.01,0.5],\n",
     "                   'sgd__class_weight':['balanced']}]\n",
     "    # pipeline\n",
     "    pipeline_sgd = Pipeline(steps=[#('pca',PCA()),\n",
@@ -631,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
