fixed some bugs or changed the file name

--- a/Concatenating_two_datasets.ipynb
+++ b/Concatenating_two_datasets.ipynb
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "# read data\n",
-    "myh7_path = 'data/myh7/mhy7.tsv'\n",
+    "myh7_path = 'data/myh7/myh7.csv'\n",
     "myo5b_path = 'data/myo5b/myo5b_variants_patho_benign_cadd1.3fullannot_v1.xlsx'\n",
     "myh7 = pd.read_csv(myh7_path,sep='\\t')\n",
     "myo5b_excel = pd.ExcelFile(myo5b_path)\n",
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
        "set()"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
